Updated the Readme file with further details. Populated the database with a 'races' table and pushed all of the data there. Created the initial server with all of the 'get' endpoints for the races table

--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
   "author": "Michael Diviesti",
   "license": "MIT",
   "dependencies": {
+    "express": "^4.17.1",
     "sqlite3": "^4.0.8"
   }
 }
