--- a/package.json
+++ b/package.json
@@ -21,7 +21,6 @@
   "author": "Michael Diviesti",
   "license": "MIT",
   "dependencies": {
-    "express": "^4.17.1",
-    "sqlite3": "^4.0.8"
+    "express": "^4.17.1"
   }
 }
