--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
   "author": "Michael Diviesti",
   "license": "MIT",
   "dependencies": {
+    "cors": "^2.8.5",
     "express": "^4.17.1"
   }
 }
